# tauri-app

./: .editorconfig  .eslintrc.cjs  .prettierrc.cjs  Makefile  package-lock.json  package.json  tsconfig.json  tsconfig.paths.json
src-tauri/: .gitignore  .taurignore  Cargo.toml  Makefile
src-tauri/migrations/: 20230429133654_create_m_role_table.down.sql  20230429133654_create_m_role_table.up.sql  20230429133858_create_organizations_table.up.sql  20230429134040_create_members_table.up.sql  20230429134104_create_teams_table.up.sql  20230429134116_create_members_teams_relations_table.down.sql  20230429134116_create_members_teams_relations_table.up.sql  20230429141255_create_m_skill_categories_table.down.sql  20230429141255_create_m_skill_categories_table.up.sql  20230429141344_create_m_skills_table.down.sql  20230429141344_create_m_skills_table.up.sql  20230429141433_create_members_skills_relations_table.down.sql  20230429141433_create_members_skills_relations_table.up.sql
src-tauri/src/: database.rs  error.rs  main.rs
src-tauri/src/handlers/: auth_handler.rs  error.rs  member_handler.rs  mod.rs  role_handler.rs
src-tauri/src/model/: member_model.rs  mod.rs  organization_model.rs  role_model.rs  skill_category_model.rs  skill_model.rs  team_model.rs
src-tauri/src/repository/: error.rs  member_repository.rs  mod.rs  organization_repository.rs  role_repository.rs  team_repository.rs
src-tauri/src/request/: auth_request.rs  mod.rs  validator.rs
src-tauri/src/response/: member_response.rs  mod.rs  role_response.rs
src-tauri/src/utils/: mod.rs  time_parse.rs
(+41 files in other folders)
