[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
directories = "5.0.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8.2"
async-trait = "0.1.68"
mockall = "0.11.4"
anyhow = "1.0.71"
thiserror = "1.0.40"
validator = { version = "0.16.0", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
